Fix logo/sidebar alignment on two-column mode *properly*
Followup on Ib2a93fa0c24f693375fb8c959e77dd47c8087121

--- a/resources/screen-desktop-mid.less
+++ b/resources/screen-desktop-mid.less
@@ -15,9 +15,8 @@
 }
 
 #mw-site-navigation {
-	// Force the portlet margins to apply at the top too
-	// No I don't know how to do this properly
-	padding-top: 0.01em;
+	// keep margins from overlapping
+	overflow: hidden;
 }
 
 #mw-related-navigation > div.sidebar-chunk:first-child {
